AccessManagerの導入